Stopped horrible shifting.

--- a/src/components/Panels.module.css
+++ b/src/components/Panels.module.css
@@ -1,6 +1,5 @@
 .row {
   display: flex;
-  align-items: center;
   justify-content: center;
   margin: 1vw;
 }
